Working validation for first email input

--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -2,7 +2,12 @@
   <mat-card class="card-width">
     <mat-list>
       <mat-list-item class="input-bottom-margin">
-        <p class="input-entry">
+        <p>
+        <app-email-validator>loading</app-email-validator>
+        </p>
+      </mat-list-item>
+      <mat-list-item class="input-bottom-margin">
+        <p>
           <mat-form-field appearance="standard" class="input-width">
             <mat-label>E-mail cím</mat-label>
             <input matInput placeholder="email.cim@pelda.com">
@@ -11,7 +16,7 @@
         </p>
       </mat-list-item>
       <mat-list-item class="input-bottom-margin">
-        <p class="input-entry">
+        <p>
           <mat-form-field appearance="standard" class="input-width">
             <mat-label>E-mail cím még egyszer</mat-label>
             <input matInput placeholder="email.cim@pelda.com">
@@ -20,7 +25,7 @@
         </p>
       </mat-list-item>
       <mat-list-item class="input-bottom-margin">
-        <p class="input-entry">
+        <p>
           <mat-form-field appearance="standard" class="input-width">
             <mat-label>Vezetéknév</mat-label>
             <input matInput placeholder="Próba">
@@ -30,7 +35,7 @@
         </p>
       </mat-list-item>
       <mat-list-item class="input-bottom-margin">
-        <p class="input-entry">
+        <p>
           <mat-form-field appearance="standard" class="input-width">
             <mat-label>Keresztnév</mat-label>
             <input matInput placeholder="István">
@@ -40,7 +45,7 @@
         </p>
       </mat-list-item>
       <mat-list-item class="input-bottom-margin">
-        <p class="input-entry">
+        <p>
           <mat-form-field appearance="standard" class="input-width">
             <mat-label>Telefonszám</mat-label>
             <input matInput placeholder="36309995522">
