--- a/src/app/email-validator/email-validator.component.html
+++ b/src/app/email-validator/email-validator.component.html
@@ -1,11 +1,28 @@
-<mat-form-field appearance="standard" class="input-width">
-  <mat-label>E-mail cím</mat-label>
-  <input matInput [formControl]="emailFormControl" placeholder="email.cim@pelda.com">
-  <mat-icon matSuffix>alternate_email</mat-icon>
-  <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-    Kérem adjon meg egy valós email címet!
-  </mat-error>
-  <mat-error *ngIf="emailFormControl.hasError('required')">
-    Az email cím megadása <strong>kötelező</strong>
-  </mat-error>
-</mat-form-field>
+<mat-list>
+  <mat-list-item class="input-bottom-margin">
+    <mat-form-field appearance="standard" class="input-width">
+      <mat-label>E-mail cím</mat-label>
+      <input type="email"
+             matInput
+             [formControl]="email"
+             placeholder="email.cim@pelda.com">
+      <mat-icon matSuffix>alternate_email</mat-icon>
+      <mat-error>
+        Kérem adjon meg egy valós email címet!
+      </mat-error>
+    </mat-form-field>
+  </mat-list-item>
+  <mat-list-item class="input-bottom-margin">
+    <mat-form-field appearance="standard" class="input-width">
+      <mat-label>E-mail cím mégegyszer</mat-label>
+      <input type="email"
+             matInput
+             [formControl]="confirmEmail"
+             placeholder="email.cim@pelda.com">
+      <mat-icon matSuffix>alternate_email</mat-icon>
+      <mat-error validateEqual="email">
+        Az email cím megadása <strong>kötelező</strong>
+      </mat-error>
+    </mat-form-field>
+  </mat-list-item>
+</mat-list>
