--- a/src/app/phone-validator/phone-validator.component.html
+++ b/src/app/phone-validator/phone-validator.component.html
@@ -1,1 +1,17 @@
-<p>phone-validator works!</p>
+<mat-list>
+  <mat-list-item class="input-bottom-margin">
+    <p>
+      <mat-form-field appearance="standard" class="input-width">
+        <mat-label>Telefonszám</mat-label>
+        <input
+          type="tel"
+          matInput
+          [formControl]="phoneNumber"
+          placeholder="36309995522">
+        <mat-icon matSuffix>phone</mat-icon>
+        <mat-hint>Csak számokat tartalmazhat a telefonszám</mat-hint>
+        <mat-error>Kérem adjon meg egy telefonszámot, mely csak számokat tartalmaz!</mat-error>
+      </mat-form-field>
+    </p>
+  </mat-list-item>
+</mat-list>
