--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -7,18 +7,9 @@
     <div>
       <app-name-validator>loading</app-name-validator>
     </div>
-    <mat-list>
-      <mat-list-item class="input-bottom-margin">
-        <p>
-          <mat-form-field appearance="standard" class="input-width">
-            <mat-label>Telefonszám</mat-label>
-            <input matInput placeholder="36309995522">
-            <mat-icon matSuffix>phone</mat-icon>
-            <mat-hint>Legalább 3 karakter hosszú</mat-hint>
-          </mat-form-field>
-        </p>
-      </mat-list-item>
-    </mat-list>
+    <div>
+      <app-phone-validator>loading</app-phone-validator>
+    </div>
     <mat-card-actions align="end">
       <button mat-button>Continue</button>
     </mat-card-actions>
