--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -10,6 +10,9 @@
     <div>
       <app-phone-validator>loading</app-phone-validator>
     </div>
+    <div>
+      <app-country-validator>loading</app-country-validator>
+    </div>
     <mat-card-actions align="end">
       <button mat-button>Continue</button>
     </mat-card-actions>
