--- a/src/app/phone-validator/phone-validator.component.html
+++ b/src/app/phone-validator/phone-validator.component.html
@@ -7,7 +7,8 @@
           type="tel"
           matInput
           [formControl]="phoneNumber"
-          placeholder="36309995522">
+          placeholder="36309995522"
+          required>
         <mat-icon matSuffix>phone</mat-icon>
         <mat-hint>Csak számokat tartalmazhat a telefonszám</mat-hint>
         <mat-error>Kérem adjon meg egy telefonszámot, mely csak számokat tartalmaz!</mat-error>
