City autofill just works with zip codes.

--- a/src/app/country-validator/country-validator.component.html
+++ b/src/app/country-validator/country-validator.component.html
@@ -9,6 +9,7 @@
             {{country.name}}
           </mat-option>
         </mat-select>
+        <mat-icon matSuffix>public</mat-icon>
         <mat-error *ngIf="countryControl.hasError('required')">Kérem válasszon egy országot!</mat-error>
       </mat-form-field>
     </p>
