--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -13,6 +13,9 @@
     <div>
       <app-country-validator>loading</app-country-validator>
     </div>
+    <div>
+      <app-zip-city-autofill>loading</app-zip-city-autofill>
+    </div>
     <mat-card-actions align="end">
       <button mat-button>Continue</button>
     </mat-card-actions>
