--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -2,6 +2,9 @@
   <mat-card class="card-width">
 
     <div>
+      <h2 class="header">Alap adatok</h2>
+    </div>
+    <div>
       <app-email-validator>loading</app-email-validator>
     </div>
     <div>
