--- a/src/app/shipping-address/shipping-address.component.css
+++ b/src/app/shipping-address/shipping-address.component.css
@@ -17,3 +17,10 @@
 .card-width {
   min-width: 400px;
 }
+
+.header {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  margin-left: 0.75em;
+  margin-right: 0.75em;
+}
