new billing address component added, and works. fixes fos zip city autofill component

--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -19,6 +19,9 @@
     <div>
       <app-zip-city-autofill>loading</app-zip-city-autofill>
     </div>
+    <div>
+      <app-billing-address>loading</app-billing-address>
+    </div>
     <mat-card-actions align="end">
       <button mat-button>Continue</button>
     </mat-card-actions>
