--- a/src/app/zip-city-autofill/zip-city-autofill.component.html
+++ b/src/app/zip-city-autofill/zip-city-autofill.component.html
@@ -1,5 +1,4 @@
 <mat-list>
-
   <mat-list-item class="input-bottom-margin">
     <p>
       <mat-form-field appearance="standard" class="input-width">
@@ -8,14 +7,13 @@
           type="text"
           matInput
           [formControl]="zipInput"
-          placeholder="1126"
+          placeholder="4024"
           required>
         <mat-icon matSuffix>home</mat-icon>
         <mat-error>Kérem adjon meg egy irányítószámot!</mat-error>
       </mat-form-field>
     </p>
   </mat-list-item>
-
   <mat-list-item class="input-bottom-margin">
     <p>
       <mat-form-field appearance="standard" class="input-width">
@@ -24,25 +22,11 @@
           type="text"
           matInput
           [value]="zipCityMap.get(zipInput.value)"
+          placeholder="Debrecen"
           required>
         <mat-icon matSuffix>home</mat-icon>
+        <mat-error>Kérem adjon meg egy várost!</mat-error>
       </mat-form-field>
     </p>
   </mat-list-item>
-
-  <!--
-  <mat-list-item class="input-bottom-margin">
-    <p>
-      <mat-form-field appearance="standard" class="input-width">
-        <mat-label>Oszrág</mat-label>
-        <mat-select [formControl]="countryControl" required>
-          <mat-option>--</mat-option>
-          <mat-option *ngFor="let country of countries" [value]="country">
-            {{country.name}}
-          </mat-option>
-        </mat-select>
-        <mat-error *ngIf="countryControl.hasError('required')">Kérem válasszon egy országot!</mat-error>
-      </mat-form-field>
-    </p>
-  </mat-list-item>-->
 </mat-list>
