Fix button text, backup before destruction

--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -1,6 +1,5 @@
 <div class="content" role="main">
   <mat-card class="card-width">
-
     <div>
       <h2 class="header">Alap adatok</h2>
     </div>
@@ -23,7 +22,9 @@
       <app-billing-address>loading</app-billing-address>
     </div>
     <mat-card-actions align="end">
-      <button mat-button>Continue</button>
+      <button
+        mat-button>
+        Küldés</button>
     </mat-card-actions>
   </mat-card>
 
