--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -139,6 +139,7 @@
                 <input
                   type="text"
                   matInput
+                  formControlName="city"
                   [value]="zipCityMap.get(formGroup.controls.zipCode.value)"
                   placeholder="Debrecen"
                   required>
@@ -186,7 +187,7 @@
       </div>
     </form>
     <mat-card-actions align="end">
-      <button mat-button> Küldés</button>
+      <button mat-button (click)="openDialog()"> Küldés</button>
     </mat-card-actions>
   </mat-card>
 
