Fix typo, fix button auto focus issue

--- a/src/app/confirm-billing-dialog/confirm-billing-dialog.component.html
+++ b/src/app/confirm-billing-dialog/confirm-billing-dialog.component.html
@@ -95,7 +95,7 @@
     </mat-list-item>
   </mat-list>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onModifyClick()">Módosítás</button>
-  <button mat-button (click)="onOkClick()">Helyes</button>
+<div mat-dialog-actions align="end">
+  <button tabindex="-1" mat-button (click)="onModifyClick()">Módosítás</button>
+  <button tabindex="-1" mat-button (click)="onOkClick()">Helyes</button>
 </div>
