--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -100,7 +100,7 @@
           <mat-list-item class="input-bottom-margin">
             <p>
               <mat-form-field appearance="standard" class="input-width">
-                <mat-label>Oszrág</mat-label>
+                <mat-label>Ország</mat-label>
                 <mat-select formControlName="country" required>
                   <mat-option>--</mat-option>
                   <mat-option *ngFor="let country of countries" [value]="country">
