Prevent paste on confirm email

--- a/src/app/shipping-address/shipping-address.component.html
+++ b/src/app/shipping-address/shipping-address.component.html
@@ -30,6 +30,7 @@
                 placeholder="email.cim@pelda.com"
                 matInput
                 required
+                (paste)="pasteEvent($event)"
                 onDrag="return false"
                 onDrop="return false"
                 onAutocomplete="return false"
