Fix some text, fix untouched city input.

--- a/src/app/confirm-billing-dialog/confirm-billing-dialog.component.html
+++ b/src/app/confirm-billing-dialog/confirm-billing-dialog.component.html
@@ -85,7 +85,7 @@
     </mat-list-item>
     <mat-list-item class="input-bottom-margin">
       <mat-form-field appearance="standard" class="input-width">
-        <mat-label>Adószám</mat-label>
+        <mat-label>Számlázási adószám</mat-label>
         <input
           value="{{data.billingData.controls.billingTaxNumber.value}}"
           matInput
